force-app/main/default/objects/TW1_Evaluation_Basis__c/TW1_Evaluation_Basis__c.object-meta.xml
<CustomObject>
    <label>Evaluation Basis</label>
    <nameField>
        <label>Evaluation Base Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Evaluation Basis</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>