force-app/main/default/objects/TW1_Evaluation_Basis__c/fields/PR_EXECU_O_DO_SERVI_O_FASE_DE_PLANEJ__c.field-meta.xml
<CustomField>
    <fullName>PR_EXECU_O_DO_SERVI_O_FASE_DE_PLANEJ__c</fullName>
    <label>PRÉ-EXECUÇÃO DO SERVIÇO - FASE DE PLANEJ</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>