force-app/main/default/objects/TW1_Evaluation_Basis__c/fields/TW1_1_1_1__c.field-meta.xml
<CustomField>
    <fullName>TW1_1_1_1__c</fullName>
    <label>1.1.1-Good Communication / Interface</label>
    <length>5</length>
    <type>Text</type>
</CustomField>