force-app/main/default/objects/TW1_Evaluation_Basis__c/fields/TW1_1_1_2__c.field-meta.xml
<CustomField>
    <fullName>TW1_1_1_2__c</fullName>
    <label>1.1.2-Effective supplier team coordinati</label>
    <length>40</length>
    <type>Text</type>
</CustomField>