force-app/main/default/objects/TW1_Evaluation_Basis__c/fields/TW1_1_1_3__c.field-meta.xml
<CustomField>
    <fullName>TW1_1_1_3__c</fullName>
    <label>1.1.3-Timely and accurate documentation,</label>
    <length>40</length>
    <type>Text</type>
</CustomField>