force-app/main/default/objects/TW1_Evaluation_Basis__c/fields/TW1_Avaliacao__c.field-meta.xml
<CustomField>
    <fullName>TW1_Avaliacao__c</fullName>
    <label>Avaliação</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Poor</fullName>
            </value>
            <value>
                <fullName>Satisfactory</fullName>
            </value>
            <value>
                <fullName>Good</fullName>
            </value>
            <value>
                <fullName>Excellent</fullName>
            </value>
            <value>
                <fullName>Unacceptable</fullName>
            </value>
            <value>
                <fullName>N/A</fullName>
            </value>
            <value>
                <fullName>No Value</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>