force-app/main/default/objects/TW1_Evaluation_Basis__c/fields/TW1_BM_ID__c.field-meta.xml
<CustomField>
    <fullName>TW1_BM_ID__c</fullName>
    <label>BM ID</label>
    <length>40</length>
    <type>Text</type>
</CustomField>