force-app/main/default/objects/TW1_Evaluation_Basis__c/fields/TW1_Eficiencia_Administrativa__c.field-meta.xml
<CustomField>
    <fullName>TW1_Eficiencia_Administrativa__c</fullName>
    <formula>(IF(TW1_1_1_1__c = &apos;N/A&apos;, 0,  VALUE( TW1_1_1_1__c)) + IF(TW1_1_1_2__c = &apos;N/A&apos;, 0,  VALUE(TW1_1_1_2__c) ) + IF(TW1_1_1_3__c = &apos;N/A&apos;, 0, VALUE(TW1_1_1_3__c)) + IF(TW1_1_1_4__c = &apos;N/A&apos;, 0, VALUE(TW1_1_1_4__c)) + IF(TW1_1_1_5__c = &apos;N/A&apos;, 0, VALUE(TW1_1_1_5__c)) + IF(TW1_1_1_6__c = &apos;N/A&apos;, 0, VALUE(TW1_1_1_6__c)) + IF(TW1_1_1_7__c = &apos;N/A&apos;, 0, VALUE(TW1_1_1_7__c)))

 / 

(IF(TW1_1_1_1__c = &apos;N/A&apos;, 0,  1) + IF(TW1_1_1_2__c = &apos;N/A&apos;, 0,  1) + IF(TW1_1_1_3__c = &apos;N/A&apos;, 0, 1) + IF(TW1_1_1_4__c = &apos;N/A&apos;, 0, 1) + IF(TW1_1_1_5__c = &apos;N/A&apos;, 0, 1) + IF(TW1_1_1_6__c = &apos;N/A&apos;, 0, 1) + IF(TW1_1_1_7__c = &apos;N/A&apos;, 0, 1))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Eficiencia Administrativa</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>