force-app/main/default/objects/TW1_Evaluation_Basis__c/fields/TW1_Engenharia__c.field-meta.xml
<CustomField>
    <fullName>TW1_Engenharia__c</fullName>
    <formula>(IF(TW1_1_2_1__c = &apos;N/A&apos;, 0, VALUE( TW1_1_2_1__c)) + IF(TW1_1_2_2__c = &apos;N/A&apos;, 0, VALUE(TW1_1_2_2__c) ) + IF(TW1_1_2_3__c = &apos;N/A&apos;, 0, VALUE(TW1_1_2_3__c)))

/

(IF(TW1_1_2_1__c = &apos;N/A&apos;, 0, 1) + IF(TW1_1_2_2__c = &apos;N/A&apos;, 0, 1) + IF(TW1_1_2_3__c = &apos;N/A&apos;, 0, 1))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Engenharia</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>