force-app/main/default/objects/TW1_Evaluation_Basis__c/fields/TW1_Justification_Text_Block_2__c.field-meta.xml
<CustomField>
    <fullName>TW1_Justification_Text_Block_2__c</fullName>
    <label>Justification Text - Block 2</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>