force-app/main/default/objects/TW1_Evaluation_Basis__c/fields/TW1_Material_Group__c.field-meta.xml
<CustomField>
    <fullName>TW1_Material_Group__c</fullName>
    <label>Material Group</label>
    <length>40</length>
    <type>Text</type>
</CustomField>