force-app/main/default/objects/TW1_Evaluation_Basis__c/fields/TW1_Media_Final__c.field-meta.xml
<CustomField>
    <fullName>TW1_Media_Final__c</fullName>
    <label>Média Final</label>
    <length>40</length>
    <type>Text</type>
</CustomField>