force-app/main/default/objects/TW1_Evaluation_Basis__c/fields/TW1_PO_item__c.field-meta.xml
<CustomField>
    <fullName>TW1_PO_item__c</fullName>
    <label>PO item</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>