force-app/main/default/objects/TW1_Evaluation_Basis__c/fields/TW1_PO_number__c.field-meta.xml
<CustomField>
    <fullName>TW1_PO_number__c</fullName>
    <label>PO number</label>
    <length>40</length>
    <type>Text</type>
</CustomField>