force-app/main/default/objects/TW1_Evaluation_Basis__c/fields/TW1_Qualidade_do_Servico__c.field-meta.xml
<CustomField>
    <fullName>TW1_Qualidade_do_Servico__c</fullName>
    <formula>(IF(TW1_1_3_1__c = &apos;N/A&apos;, 0, VALUE( TW1_1_3_1__c)) + IF(TW1_1_3_2__c = &apos;N/A&apos;, 0, VALUE(TW1_1_3_2__c) ) + IF(TW1_1_3_3__c = &apos;N/A&apos;, 0, VALUE(TW1_1_3_3__c)))

/

(IF(TW1_1_3_1__c = &apos;N/A&apos;, 0, 1) + IF(TW1_1_3_2__c = &apos;N/A&apos;, 0, 1) + IF(TW1_1_3_3__c = &apos;N/A&apos;, 0, 1))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Qualidade do Serviço</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>