force-app/main/default/objects/TW1_Evaluation_Basis__c/fields/TW1_SAP_Code__c.field-meta.xml
<CustomField>
    <fullName>TW1_SAP_Code__c</fullName>
    <label>SAP Code</label>
    <length>40</length>
    <type>Text</type>
</CustomField>