force-app/main/default/objects/TW1_Evaluation_Basis__c/fields/TW1_SES_creation_date__c.field-meta.xml
<CustomField>
    <fullName>TW1_SES_creation_date__c</fullName>
    <label>SES creation date</label>
    <type>Date</type>
</CustomField>