force-app/main/default/objects/TW1_Evaluation_Basis__c/fields/TW1_SES_creation_user__c.field-meta.xml
<CustomField>
    <fullName>TW1_SES_creation_user__c</fullName>
    <label>SES creation user</label>
    <length>100</length>
    <type>Text</type>
</CustomField>