force-app/main/default/objects/TW1_Evaluation_Basis__c/fields/TW1_SES_end_period__c.field-meta.xml
<CustomField>
    <fullName>TW1_SES_end_period__c</fullName>
    <label>SES end period</label>
    <type>Date</type>
</CustomField>