force-app/main/default/objects/TW1_Evaluation_Basis__c/fields/TW1_SES_number__c.field-meta.xml
<CustomField>
    <fullName>TW1_SES_number__c</fullName>
    <label>SES number</label>
    <length>40</length>
    <type>Text</type>
</CustomField>