force-app/main/default/objects/TW1_Evaluation_Basis__c/fields/TW1_Unit__c.field-meta.xml
<CustomField>
    <fullName>TW1_Unit__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Plant</label>
    <referenceTo>TW1_Facility__c</referenceTo>
    <relationshipLabel>Evaluation Basis</relationshipLabel>
    <relationshipName>Evaluation_Basis</relationshipName>
    <type>Lookup</type>
</CustomField>