force-app/main/default/objects/TW1_Evaluation_Basis__c/fields/TW1_Vendor__c.field-meta.xml
<CustomField>
    <fullName>TW1_Vendor__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Supplier</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Evaluation Basis</relationshipLabel>
    <relationshipName>Evaluation_Basis</relationshipName>
    <type>Lookup</type>
</CustomField>