force-app/main/default/objects/TW1_Evaluation_Basis__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>CREATED_DATE</columns>
    <columns>TW1_BM_ID__c</columns>
    <columns>TW1_Eficiencia_Administrativa__c</columns>
    <columns>PR_EXECU_O_DO_SERVI_O_FASE_DE_PLANEJ__c</columns>
    <columns>TW1_Engenharia__c</columns>
    <columns>TW1_Qualidade_do_Servico__c</columns>
    <columns>TW1_PO_number__c</columns>
    <columns>TW1_Unit__c</columns>
    <columns>TW1_Vendor__c</columns>
    <columns>TW1_SES_end_period__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>